fixed nav and spacing

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,10 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
 
-.clear-padding{
-  margin-right: 20px;
-  }
-
 
 body{
 	background-size:cover
@@ -374,12 +370,17 @@ header {
 
 .ap-logo{
 	margin-bottom:60px;
+	margin-top:60px;
 }
 
 /*nav*/
+
+nav a{
+	margin-top: 20px;
+}
 nav#navigation {
     position:absolute;
-	width:90%;
+	width:87.55%;
 	position: fixed;
     left: 0;
     top: 0;
@@ -469,7 +470,7 @@ nav#navigation .nav-trigger.open span::after {
 }
 
 nav#navigation ul {
-    width:100%;
+    width:88.2%;
     position:absolute;
     right:0;
     top:38px;
@@ -543,6 +544,7 @@ nav#navigation ul li.last a:hover {
 
 h1{
 	font-size:50px;
+	margin-top:10px;
 }
 
 h2{
